--- a/css/stils.css
+++ b/css/stils.css
@@ -55,6 +55,11 @@ p {font-size: 16px;}
 }
 
 #navbar a:hover {
+  background-color: black;
+  color: green;
+}
+
+#navbar a:hover {
   background-color: #ddd;
   color: black;
 }
