--- a/css/stils.css
+++ b/css/stils.css
@@ -47,7 +47,7 @@ p {font-size: 16px;}
 #navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
