--- a/css/stils.css
+++ b/css/stils.css
@@ -94,7 +94,8 @@ input {
   padding: 20px;
 }
 .truncate code {
-  width:500px;
+  width:300px;
+  height:50px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;  
