--- a/css/stils.css
+++ b/css/stils.css
@@ -78,13 +78,9 @@ input {
 
 .my_gradient{
   background: linear-gradient(to right,#000,#0575e6);
+  text-align: center;
 }
-.my_gradient a {
-    text-align: center;
-}
-.my_gradient h3 {
-    text-align: center;
-}
+
 .truncate h4 {
   width:200px;
   white-space: nowrap;
@@ -92,13 +88,5 @@ input {
   text-overflow: ellipsis;  
   resize:horizontal;
   padding: 20px;
-}
-.truncate code {
-  width:300px;
-  height:50px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;  
-  resize:vertical;
-  padding: 20px;
+  background: white;
 }
